versions/3.3.1/docs/CustomFieldPartialUpdate.md
# CustomFieldPartialUpdate

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**labels** | **list[str]** |  | [optional] 
**options** | **list[str]** |  | [optional] 
**name** | **str** |  | [optional] 
**order** | **int** |  | [optional] 
**type** | **str** |  | [optional] 
**use_for_uploads** | **bool** |  | [optional] 
**require_to_upload** | **bool** |  | [optional] 
**non_user_editable** | **bool** |  | [optional] 
**validation** | **str** |  | [optional] 
**regex** | **str** |  | [optional] 
**range_min** | **int** |  | [optional] 
**range_max** | **int** |  | [optional] 
**number_of_digits** | **int** |  | [optional] 
**metadata_prefill** | **str** |  | [optional] 
**highlight_expiration** | **bool** |  | [optional] 
**multiple_response** | **bool** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


