versions/3.5.1/docs/CustomFieldPartialUpdate.md
# CustomFieldPartialUpdate


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**labels** | **[{str: (str, none_type)}]** |  | [optional] 
**options** | **[str, none_type]** |  | [optional] 
**name** | **str** |  | [optional] 
**order** | **int** |  | [optional] 
**type** | **str** |  | [optional] 
**use_for_uploads** | **bool** |  | [optional] 
**require_to_upload** | **bool** |  | [optional] 
**non_user_editable** | **bool** |  | [optional] 
**validation** | **str, none_type** |  | [optional] 
**regex** | **str, none_type** |  | [optional] 
**range_min** | **int, none_type** |  | [optional] 
**range_max** | **int, none_type** |  | [optional] 
**number_of_digits** | **int, none_type** |  | [optional] 
**metadata_prefill** | **str, none_type** |  | [optional] 
**highlight_expiration** | **bool** |  | [optional] 
**multiple_response** | **bool** |  | [optional] 
**help_text** | **str, none_type** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


